# trail-cut

./: ARCHITECTURE.md  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: ffmpeg.rs  gpx.rs  media.rs  mod.rs  project.rs  recent.rs
src-tauri/src/util/: exiftool.rs  fs.rs  hash.rs  mod.rs
src/components/: AspectRatioPicker.tsx  ClipInfo.tsx  CollapsibleToolbar.tsx  EditToolbar.tsx  MapView.tsx  ModePicker.tsx  NumberStepper.tsx  Timeline.tsx  VideoPreview.tsx
src/components/EditToolbar/: EditToolbar.tsx  NumberStepper.tsx  styles.ts
src/components/MapToolbar/: MapToolbar.tsx  styles.ts
src/components/Timeline/: InfoPopover.tsx  Timeline.tsx  icons.tsx  styles.ts
src/components/VideoPreview/: CropOverlay.tsx  VideoPreview.tsx  constants.ts  styles.ts  useFocalDrag.ts  usePlayback.ts  useTrimDrag.ts
src/components/shared/: ConfirmModal.tsx  Dropdown.tsx  ErrorBanner.tsx
src/hooks/: useAutoSave.ts  useDropdownClose.ts  useMediaImport.ts  useProject.ts  useRecentProjects.ts
src/lib/: routeLocation.ts
src/screens/: HomeScreen.tsx  ProjectView.tsx
src/shortcuts/: catalog.ts  useEditorShortcuts.ts
src/theme/: common.ts  tokens.ts
src/utils/: clips.ts  format.ts
