[package]
name = "trail-cut"
version = "0.1.0"
description = "A macOS app for turning hiking videos + GPS routes into polished map-integrated videos"
authors = ["you"]
edition = "2021"

[lib]
name = "trail_cut_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
roxmltree = "0.20"
chrono = { version = "0.4", features = ["serde"] }
